styles/navigation.css
/* nav */

nav {
	padding-top: 2rem;
	padding-bottom: 2rem;
}

nav .nav-content {
	display: flex;
	align-items: center;
	height: 100%;
}

/* logo */

.logo {
	height: 2rem;
	z-index: 10;
}

#logo-white {
	display: none;
}

/* nav links */

.nav-links {
	display: flex;
	list-style-type: none;
	justify-content: space-around;
	align-items: center;
	margin-left: auto;
	z-index: 3;
}

.nav-links li a {
	text-decoration: none;
	font: var(--font-small);
	color: var(--color-black);
	margin-left: 2.5rem;
}

.nav-links li a:hover {
	text-decoration: underline;
}

.nav-links li a.active {
	font-weight: bold;
}

.nav-links li a.active:hover {
	text-decoration: none;
}

.nav-links li .btn-secondary {
	padding: 0.4rem 2rem;
}

.nav-links li a.btn-secondary:hover {
	text-decoration: none;
}

/* hamburger */
.hamburger {
	display: none;
}

/* mobile */
@media only screen and (max-width: 768px) {
	/* nav */

	nav {
		position: relative;
	}

	/* logo */

	#logo-white.nav-opened {
		display: inline-block;
	}

	#logo-black.nav-opened {
		display: none;
	}

	/* hamburger */

	.hamburger {
		position: absolute;
		display: inline;
		right: 5%;
		top: 50%;
		transform: translate(-5%, -50%);
		border: none;
		background: none;
		cursor: pointer;
		z-index: 10;
	}

	.hamburger svg {
		stroke: var(--color-black);
	}

	.hamburger[data-state="closed"] .line {
		animation: to-open-icon 1s forwards;
	}

	.hamburger[data-state="opened"] .line {
		animation: to-close-icon 1s forwards;
	}

	.hamburger .line.nav-opened {
		stroke: white;
	}

	.hamburger .top {
		--rotation: 45deg;
		transform-origin: 35px 45px;
	}

	.hamburger .bottom {
		--rotation: -45deg;
		transform-origin: 40px 55px;
	}

	@keyframes to-close-icon {
		0% {
			stroke-dashoffset: 0;
		}
		40% {
			stroke-dashoffset: 79.9;
		}
		60% {
			stroke-dashoffset: 79.9;
			rotate: var(--rotation);
		}
		100% {
			stroke-dashoffset: 0;
			rotate: var(--rotation);
		}
	}

	@keyframes to-open-icon {
		0% {
			stroke-dashoffset: 0;
			rotate: var(--rotation);
		}
		40% {
			stroke-dashoffset: 79.9;
			rotate: var(--rotation);
		}
		60% {
			stroke-dashoffset: 79.9;
		}
		100% {
			stroke-dashoffset: 0;
		}
	}

	/* nav links */

	.nav-links {
		position: fixed;
		top: 0;
		left: 0;
		height: 100vh;
		width: 100vw;
		flex-direction: column;
		justify-content: flex-start;
		align-items: center;
		padding-top: 6rem;
		background: var(--color-primary);
		clip-path: circle(100px at 100% -20%);
		-webkit-clip-path: circle(100px at 100% -20%);
		transition: all 1s ease-out;
	}

	.nav-links.open {
		clip-path: circle(2000px at 90% -10%);
		-webkit-clip-path: circle(2000px at 90% -10%);
	}

	.nav-links li {
		opacity: 0;
		margin-top: 3rem;
		transform: translateX(-1.25rem);
	}

	.nav-links li a {
		font-size: 1.5rem;
		color: white;
	}

	.nav-links li:nth-child(1) {
		transition: all 0.75s ease 0.1s;
	}

	.nav-links li:nth-child(2) {
		transition: all 0.75s ease 0.2s;
	}

	.nav-links li:nth-child(3) {
		transition: all 0.75s ease 0.3s;
	}

	.nav-links li:nth-child(4) {
		transition: all 0.75s ease 0.4s;
	}

	li.fade {
		opacity: 1;
	}

	/* contact button */

	.nav-links .btn-secondary:hover {
		background: none;
	}
}

